brat/test/golden/kernel/classical_return.brat.golden
Error in test/golden/kernel/classical_return.brat@FC {start = Pos {line = 5, col = 24}, end = Pos {line = 5, col = 27}}:
f :: { Qubit -o Qubit, Int }
                       ^^^

  Parse error unexpected Int
expecting (...), Bool, Comment, Horizontal space, Money, Qubit, Vec, \n, or whitespace


